<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="preg"
            type="edu.aku.hassannaqvi.f4he_baseline.models.Pregnancy" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <!-- CUSTOM TOOLBAR -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/CustomToolbarTheme"
        app:popupTheme="@style/CustomPopupTheme"
        app:subtitle="@string/btitle"
        app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
        app:title="@string/bs1basicinformation_mainheading"
        app:titleTextAppearance="@style/Toolbar.TitleText" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/GrpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/fldGrpCVbs1q7t1"
            style="@style/cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/labelsHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bs1q7t1" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/fldGrpCVbs1q7p1"
        style="@style/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Q-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom"
                android:orientation="horizontal">

                <TextView
                    style="@style/quesNum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Q_bs1q7p1" />

                <TextView
                    android:layout_width="450dp"
                    android:layout_height="match_parent"
                    android:text="@string/bs1q7p1" />

                <TextView
                    style="@style/sub_labels"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="sno" />

            </LinearLayout>

            <!--bs1q7p1g-->
            <RadioGroup
                android:id="@+id/bs1q7p1g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/sub_labels"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/bs1q7p1g" />

                <RadioButton
                    android:id="@+id/bs1q7p1g01"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="@{preg.bs1q7p1g.equals(`1`)}"
                    android:onClick="@{()->preg.setBs1q7p1g(`1`)}"
                    android:text="@string/bs1q7p1g01" />

                <RadioButton
                    android:id="@+id/bs1q7p1g02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="@{preg.bs1q7p1g.equals(`2`)}"
                    android:onClick="@{()->preg.setBs1q7p1g(`2`)}"
                    android:text="@string/bs1q7p1g02" />

            </RadioGroup>

            <!--bs1q7p1b-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/sub_labels"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/bs1q7p1b" />

                <com.edittextpicker.aliazaz.EditTextPicker
                    android:id="@+id/bs1q7p1b"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="#"
                    android:inputType="number"
                    android:text="@={preg.bs1q7p1b}"
                    app:maxValue="2"
                    app:minValue="0"
                    app:type="range" />

            </LinearLayout>

            <!--bs1q7p1d-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/sub_labels"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/bs1q7p1d" />

                <RadioGroup
                    android:id="@+id/bs1q7p1d"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        style="@style/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bs1q7p1dt1" />

                    <RadioButton
                        android:id="@+id/bs1q7p1d01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{preg.bs1q7p1d.equals(`1`)}"
                        android:onClick="@{()->preg.setBs1q7p1d(`1`)}"
                        android:text="@string/bs1q7p1d01" />

                    <RadioButton
                        android:id="@+id/bs1q7p1d02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{preg.bs1q7p1d.equals(`2`)}"
                        android:onClick="@{()->preg.setBs1q7p1d(`2`)}"
                        android:text="@string/bs1q7p1d02" />

                    <RadioButton
                        android:id="@+id/bs1q7p1d03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{preg.bs1q7p1d.equals(`3`)}"
                        android:onClick="@{()->preg.setBs1q7p1d(`3`)}"
                        android:text="@string/bs1q7p1d03" />

                    <RadioButton
                        android:id="@+id/bs1q7p1d04"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{preg.bs1q7p1d.equals(`4`)}"
                        android:onClick="@{()->preg.setBs1q7p1d(`4`)}"
                        android:text="@string/bs1q7p1d04" />

                    <TextView
                        style="@style/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bs1q7p1dt2" />

                    <RadioButton
                        android:id="@+id/bs1q7p1d05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{preg.bs1q7p1d.equals(`5`)}"
                        android:onClick="@{()->preg.setBs1q7p1d(`5`)}"
                        android:text="@string/bs1q7p1d05" />

                    <RadioButton
                        android:id="@+id/bs1q7p1d06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{preg.bs1q7p1d.equals(`6`)}"
                        android:onClick="@{()->preg.setBs1q7p1d(`6`)}"
                        android:text="@string/bs1q7p1d06" />

                    <RadioButton
                        android:id="@+id/bs1q7p1d96"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{preg.bs1q7p1d.equals(`96`)}"
                        android:onClick="@{()->preg.setBs1q7p1d(`96`)}"
                        android:text="@string/bs1q7p1d96" />

                    <EditText
                        android:id="@+id/bs1q7p1d96x"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                        android:hint="@string/bs1q7p1d96"
                        android:tag="bs1q7p1d96"
                        android:text="@={preg.bs1q7p1d96x}"
                        android:visibility="@{preg.bs1q7p1d.equals(`96`) ? View.VISIBLE : View.GONE}" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


        <!--EndButton LinearLayout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_End"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@color/red_overlay"
                android:onClick="btnEnd"
                android:text="Cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_Continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@color/green_overlay"
                android:onClick="btnContinue"
                android:text="Save"
                android:textColor="@color/white" />

        </LinearLayout>
        <!--EndButton LinearLayout-->
    </LinearLayout>
    </ScrollView>
    </LinearLayout>

</layout>