<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <!--        <variable
                    name="ladol"
                    type="edu.aku.hassannaqvi.f4he_baseline.models.LateAdolescent" />-->

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_gray"
        android:orientation="vertical">


        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/CustomToolbarTheme"
            app:popupTheme="@style/CustomPopupTheme"
            app:subtitle="@string/es1title"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:title="@string/es1knowledgeattitudeandpractices_mainheading"
            app:titleTextAppearance="@style/Toolbar.TitleText" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/es1title" />

                <!-- es1resp  Input   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVes1resp"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_es1resp" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/es1resp" />

                            <TextView
                                android:layout_width="115dp"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="Line Number" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="Age" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/es1resp"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:minHeight="56dp"
                                android:prompt="@string/es1resp"
                                android:spinnerMode="dropdown" />

                            <TextView
                                android:id="@+id/es1respline"
                                style="@style/textView"
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                android:gravity="center" />

                            <TextView
                                android:id="@+id/age"
                                style="@style/textView"
                                android:layout_width="70dp"
                                android:layout_height="match_parent" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!--EndButton LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:padding="24dp">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:onClick="btnEnd"
                        android:text="Cancel"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/capsule"
                        android:backgroundTint="@color/colorAccent"
                        android:backgroundTintMode="src_atop"
                        android:gravity="center"
                        android:onClick="btnContinue"
                        android:text="Select"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <!--EndButton LinearLayout-->

            </LinearLayout>


        </ScrollView>


    </LinearLayout>


</layout>